wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
